# bytecounttest

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: newlinecount.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzzer_script_1.rs
lemire/: newlines.c
src/: lib.rs
