[package]
name = "bytecounttest"
version = "0.1.0"
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]

[dependencies.bytecount]
version = "0.1"
features = ["simd-accel", "avx-accel"]

[dev-dependencies]
quickcheck = "0.4"
bencher = "0.1"
lazy_static = "0.2"

[[bench]]
name = "newlinecount"
harness = false
